Изменила стратегию дамми-классификатора

--- a/bank_churn_prediction.ipynb
+++ b/bank_churn_prediction.ipynb
@@ -1993,7 +1993,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dummy_model = DummyClassifier(strategy=\"constant\", constant=1)"
+    "dummy_model = DummyClassifier(strategy=\"stratified\", constant=1)"
    ]
   },
   {
